force-app/main/default/objects/Freelance__c/Freelance__c.object-meta.xml
<CustomObject>
    <label>Freelance</label>
    <nameField>
        <label>Freelance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freelances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>