force-app/main/default/objects/Freelance__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Available</description>
    <inlineHelpText>Available</inlineHelpText>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>