force-app/main/default/objects/Freelance__c/fields/Call_to_Discuss__c.field-meta.xml
<CustomField>
    <fullName>Call_to_Discuss__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Call to Discuss</description>
    <inlineHelpText>Call to Discuss</inlineHelpText>
    <label>Call to Discuss</label>
    <type>Checkbox</type>
</CustomField>