force-app/main/default/objects/Freelance__c/fields/Cargo_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Shipment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cargo Shipment</description>
    <inlineHelpText>Cargo Shipment</inlineHelpText>
    <label>Cargo Shipment</label>
    <type>Checkbox</type>
</CustomField>