force-app/main/default/objects/Freelance__c/fields/Driving_License__c.field-meta.xml
<CustomField>
    <fullName>Driving_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Driving License</description>
    <inlineHelpText>Driving License</inlineHelpText>
    <label>Driving License</label>
    <type>Checkbox</type>
</CustomField>