force-app/main/default/objects/Freelance__c/fields/Electricity__c.field-meta.xml
<CustomField>
    <fullName>Electricity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Electricity</description>
    <inlineHelpText>Electricity</inlineHelpText>
    <label>Electricity</label>
    <type>Checkbox</type>
</CustomField>