force-app/main/default/objects/Freelance__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>Full name</description>
    <inlineHelpText>Full name</inlineHelpText>
    <label>Full name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>