force-app/main/default/objects/Freelance__c/fields/Mechanical__c.field-meta.xml
<CustomField>
    <fullName>Mechanical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mechanical</description>
    <inlineHelpText>Mechanical</inlineHelpText>
    <label>Mechanical</label>
    <type>Checkbox</type>
</CustomField>